2005-12-08  Dan Williams  <dcbw@redhat.com>

	* gconf/gconf.c: (gconf_unescape_string): Don't stomp on
	  the function-level scoped 'end' from deep in the function.
	  Fixes a segfault.

2005-11-11  Dinoop Thomas  <dinoop.thomas@wipro.com>
	
	* gconf/gconf.c: (gconf_debug_shutdown): Corrected documentation.
	* doc/gconf/gconf-sections.txt: Included the functions for which doc was
	  newly added.
	* doc/gconf/tmpl/gconf-changeset.sgml,
	  doc/gconf/tmpl/gconf-client.sgml,
	  doc/gconf/tmpl/gconf-engine.sgml,
	  doc/gconf/tmpl/gconf-error.sgml,
	  doc/gconf/tmpl/gconf-internals.sgml,
	  doc/gconf/tmpl/gconf-listeners.sgml,
	  doc/gconf/tmpl/gconf-value.sgml,
	  doc/gconf/tmpl/gconf.sgml: Included documentation for all the missing 
	  functions exported by gconf library.

2005-11-08  Mark McLoughlin  <mark@skynet.ie>

	Patch from Jens Granseuer <jensgr@gmx.net> in bug #320852

	* gconf/gconf-listeners.c: (ltable_insert): remove C99
	usage.

2005-11-03  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

==================== 2.12.1 ====================
	
2005-11-03  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2005-11-01  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf/gconf-backend.c: (gconf_get_backend): Use
	G_MODULE_BIND_LAZY in g_module_open().
	* gconf/gconf-internals.c: (gconf_value_from_corba_value),
	(gconf_value_type_to_string), (gconf_unquote_string_inplace),
	(type_byte), (byte_type), (gconf_value_encode),
	(gconf_get_lock_or_current_holder): Remove unused and
	unreachable code.
	* gconf/gconf-listeners.c: (ltable_insert): Warning fix.
	* gconf/gconf-value.c: (gconf_value_compare): Same here.
	* gconf/gconf.c: (gconf_unescape_key),
	(corba_errno_to_gconf_errno), (gconf_server_broken),
	(gconf_handle_corba_exception): And here.
	* gconf/gconfd.c: (main): Missing closelog() call.

2005-10-28  Erdal Ronahi  <erdal.ronahi@gmail.com>

	* configure.in: Added ku (Kurdish) to ALL_LINGUAS
