@@ -1,3 +1,9 @@
+2005-12-08  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* gconf/gconf-internals.c: (gconf_value_decode): Make
+	this function work for schemas too. Patch from Nicolas Peninguy
+	<npeniguy@gmail.com>. Closes bug #323509.
+
 2005-12-08  Dan Williams  <dcbw@redhat.com>
 
 	* gconf/gconf.c: (gconf_unescape_string): Don't stomp on
